--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
       <th scope="col">#</th>
       <th scope="col">First</th>
       <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Email</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td>Jenny</td>
+      <td>Joyce</td>
+      <td>Jennifer.Joyce@ou.edu</td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>Jenn</td>
+      <td>Joy</td>
+      <td>jennjoy@gmail.com</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
+      <td colspan="2">Beyonce</td>
+      <td>Beyonce@singer.com</td>
     </tr>
   </tbody>
 </table>
