--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       <td colspan="2">Beyonce</td>
       <td>Beyonce@singer.com</td>
     </tr>
+        <tr>
+      <th scope="row">2</th>
+      <td>Jenn</td>
+      <td>Joy</td>
+      <td>jennjoy@gmail.com</td>
+    </tr>
   </tbody>
 </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
