--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 <h4>Example heading <span class="badge bg-secondary">New</span></h4>
 <h5>Example heading <span class="badge bg-secondary">New</span></h5>
 <h6>Example heading <span class="badge bg-secondary">New</span></h6>
+    <ul class="list-group">
+  <li class="list-group-item">An item</li>
+  <li class="list-group-item">A second item</li>
+  <li class="list-group-item">A third item</li>
+  <li class="list-group-item">A fourth item</li>
+  <li class="list-group-item">And a fifth one</li>
+</ul>
   </tbody>
 </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
