--- a/Alerts.html
+++ b/Alerts.html
@@ -10,6 +10,7 @@
     <div class = "container"
     <h1>Alerts Page!</h1>
       <a href="index.html">Back to Home Page</a>
+    </div>
       <div class="alert alert-primary" role="alert">
   A simple primary alert—check it out!
 </div>
