--- a/Accordian.html
+++ b/Accordian.html
@@ -9,7 +9,7 @@
   <body>
     <div class = "container"
     <h1>Accordion!</h1>
-      <a href="index.html">Home Page</a>
+      <a href="index.html"> Back to Home Page</a>
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
