--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Home Page!</h1>
       <a href="Accordion.html">Accordion Page</a>
       <a href="Alerts.html">Alert Page</a>
+      <a href="Table.html">Table Page</a>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
