--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <a href="Alerts.html">Alert Page</a>
       <a href="Table.html">Table Page</a>
       <a href="Cards.html">Cards Page</a>
+      <a href="Buttons.html">Buttons Page</a>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
