--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <div class = "container"
     <h1>Home Page!</h1>
       <a href="Accordion.html">Accordion Page</a>
+    </div>
       <a href="Alerts.html">Alert Page</a>
+    </div>
       <a href="Table.html">Table Page</a>
+    </div>
       <a href="Cards.html">Cards Page</a>
+    </div>
       <a href="Buttons.html">Buttons Page</a>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
