--- a/Accordian.html
+++ b/Accordian.html
@@ -10,6 +10,7 @@
     <div class = "container"
     <h1>Accordion!</h1>
       <a href="index.html"> Back to Home Page</a>
+    </div>
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
