--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class = "container"
     <h1>Home Page!</h1>
-      <a href="Accordion.html">Accordion Page</a>
+      <a href="Accordian.html">Accordion Page</a>
     </div>
       <a href="Alerts.html">Alert Page</a>
     </div>
