--- a/Table.html
+++ b/Table.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class = "container"
-    <h1>Home Page!</h1>
+    <h1>Table Page!</h1>
       <a href="index.html">Back to Home Page</a>
       <table class="table">
   <thead>
