--- a/Cards.html
+++ b/Cards.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class = "container"
-    <h1>Home Page!</h1>
+    <h1>Cards Page!</h1>
       <a href="index.html">Back to Home Page</a>
       
       <div class="card" style="width: 18rem;">
@@ -50,8 +50,7 @@
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-</div>
-   
+      </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
