--- a/Cards.html
+++ b/Cards.html
@@ -10,7 +10,7 @@
     <div class = "container"
     <h1>Cards Page!</h1>
       <a href="index.html">Back to Home Page</a>
-      
+    </div>
       <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
