--- a/Buttons.html
+++ b/Buttons.html
@@ -8,27 +8,28 @@
   </head>
   <body>
     <div class = "container"
-    <h1>Home Page!</h1>
+    <h1>This is the Button Page!</h1>
+    </div>
       <a href="index.html">Back To Home Page</a>
      <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+  <label class="btn btn-outline-primary" for="btncheck1">Button 1</label>
       </div>
          <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+  <label class="btn btn-outline-primary" for="btncheck1">Button 2</label>
       </div>
          <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+  <label class="btn btn-outline-primary" for="btncheck1">Button 3</label>
       </div>
          <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+  <label class="btn btn-outline-primary" for="btncheck1">Button 4</label>
       </div>
          <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btncheck1">Checkbox 1</label>
+  <label class="btn btn-outline-primary" for="btncheck1">Button 5</label>
       </div>
        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
