--- a/Accordian.html
+++ b/Accordian.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class = "container"
-    <h1>Accordion!</h1>
+    <h1>Accordion Page!</h1>
       <a href="index.html"> Back to Home Page</a>
     </div>
 <div class="accordion" id="accordionExample">
