--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <div class = "container"
     <h1>Home Page!</h1>
       <a href="Accordian.html">Accordion Page</a>
-    </div>
+    </h1>
       <a href="Alerts.html">Alert Page</a>
-    </div>
+    </h1>
       <a href="Table.html">Table Page</a>
-    </div>
+    </h1>
       <a href="Cards.html">Cards Page</a>
-    </div>
+    </h1>
       <a href="Buttons.html">Buttons Page</a>
+    </h1>
       </div>
     <table class="table">
   <thead>
@@ -35,14 +36,23 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-   
-      <td>@fat</td>
+      <td> Alerts Page</td>
+      <td> <a href="Alerts.html">Alert Page</a></td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
+      <td>Table Page</td>
+      <td> <a href="Table.html">Table Page</a> </td>
+    </tr>
+     <tr>
+      <th scope="row">2</th>
+      <td> Cards Page</td>
+      <td>  <a href="Cards.html">Cards Page</a> </td>
+    </tr>
+     <tr>
+      <th scope="row">2</th>
+      <td> Button Page</td>
+      <td>  <a href="Buttons.html">Buttons Page</a> </td>
     </tr>
   </tbody>
 </table>
