--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <th scope="row">Page 1</th>
       <td>Accordion Page</td>
       <td> <a href="Accordian.html">Accordion Page</a> </td>
     </tr>
     <tr>
-      <th scope="row">2</th>
+      <th scope="row">Page 2</th>
       <td> Alerts Page</td>
       <td> <a href="Alerts.html">Alert Page</a></td>
     </tr>
     <tr>
-      <th scope="row">3</th>
+      <th scope="row">Page 3</th>
       <td>Table Page</td>
       <td> <a href="Table.html">Table Page</a> </td>
     </tr>
      <tr>
-      <th scope="row">2</th>
+      <th scope="row">Page 4</th>
       <td> Cards Page</td>
       <td>  <a href="Cards.html">Cards Page</a> </td>
     </tr>
      <tr>
-      <th scope="row">2</th>
+      <th scope="row">Page 5</th>
       <td> Button Page</td>
       <td>  <a href="Buttons.html">Buttons Page</a> </td>
     </tr>
