--- a/Table.html
+++ b/Table.html
@@ -38,10 +38,10 @@
       <td>@twitter</td>
     </tr>
        <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <th scope="row">4</th>
+      <td>Jenny</td>
+      <td>Joyce</td>
+      <td>@lover</td>
     </tr>
   </tbody>
 </table>
